testdata/baselines/reference/compiler/tluaBigintRemoved.errors.txt
tluaBigintRemoved.tlua(13,12): error TS1351: An identifier or keyword cannot immediately follow a numeric literal.
tluaBigintRemoved.tlua(13,12): error TS2304: Cannot find name 'n'.
tluaBigintRemoved.tlua(14,14): error TS1351: An identifier or keyword cannot immediately follow a numeric literal.
tluaBigintRemoved.tlua(14,14): error TS2304: Cannot find name 'n'.
tluaBigintRemoved.tlua(15,13): error TS1351: An identifier or keyword cannot immediately follow a numeric literal.
tluaBigintRemoved.tlua(15,13): error TS2304: Cannot find name 'n'.
tluaBigintRemoved.tlua(18,10): error TS2304: Cannot find name 'bigint'.
tluaBigintRemoved.tlua(19,14): error TS2304: Cannot find name 'bigint'.
tluaBigintRemoved.tlua(20,23): error TS2304: Cannot find name 'bigint'.
tluaBigintRemoved.tlua(20,32): error TS2304: Cannot find name 'bigint'.
tluaBigintRemoved.tlua(23,22): error TS1351: An identifier or keyword cannot immediately follow a numeric literal.
tluaBigintRemoved.tlua(23,22): error TS2304: Cannot find name 'n'.
tluaBigintRemoved.tlua(24,4): error TS2872: This kind of expression is always truthy.
tluaBigintRemoved.tlua(24,5): error TS1351: An identifier or keyword cannot immediately follow a numeric literal.
tluaBigintRemoved.tlua(24,5): error TS2304: Cannot find name 'n'.
tluaBigintRemoved.tlua(24,7): error TS1128: Declaration or statement expected.


==== tluaBigintRemoved.tlua (16 errors) ====
    // bigint does not exist in tlua: Lua has a single `number` type. Neither the
    // `0n` literal nor the `bigint` type keyword survives. The `n` suffix no longer
    // scans as a bigint marker, so an `n` glued to a numeric literal is the ordinary
    // "identifier cannot immediately follow a numeric literal" error, and `bigint`
    // in a type position is just an unresolved name (`Cannot find name 'bigint'`).
    //
    // Each use also pins that the scanner/parser keep making progress: the stray `n`
    // is scanned as a separate identifier rather than re-entering forever.
    
    declare v: number;
    
    // `0n` no longer scans as a bigint literal; the trailing `n` is rejected.
    local a = 0n;
               ~
!!! error TS1351: An identifier or keyword cannot immediately follow a numeric literal.
               ~
!!! error TS2304: Cannot find name 'n'.
    local b = 123n;
                 ~
!!! error TS1351: An identifier or keyword cannot immediately follow a numeric literal.
                 ~
!!! error TS2304: Cannot find name 'n'.
    local c = -5n;
                ~
!!! error TS1351: An identifier or keyword cannot immediately follow a numeric literal.
                ~
!!! error TS2304: Cannot find name 'n'.
    
    // `bigint` is not a type keyword; it resolves to an unknown name.
    local t: bigint = 1;
             ~~~~~~
!!! error TS2304: Cannot find name 'bigint'.
    type Alias = bigint;
                 ~~~~~~
!!! error TS2304: Cannot find name 'bigint'.
    declare function f(x: bigint): bigint;
                          ~~~~~~
!!! error TS2304: Cannot find name 'bigint'.
                                   ~~~~~~
!!! error TS2304: Cannot find name 'bigint'.
    
    // `0n` in assorted expression positions.
    local obj = { key = 1n };
                         ~
!!! error TS1351: An identifier or keyword cannot immediately follow a numeric literal.
                         ~
!!! error TS2304: Cannot find name 'n'.
    if 0n then
       ~
!!! error TS2872: This kind of expression is always truthy.
        ~
!!! error TS1351: An identifier or keyword cannot immediately follow a numeric literal.
        ~
!!! error TS2304: Cannot find name 'n'.
          ~~~~
!!! error TS1128: Declaration or statement expected.
    end
    
    // Plain number arithmetic still works and yields `number`.
    local sum: number = v + 1;
    local prod: number = v * 2;
    local neg: number = -v;
    local len: number = #"abc";
    